broadcast and receive for multiple nodes

--- a/task1/backend/Dockerfile
+++ b/task1/backend/Dockerfile
@@ -10,7 +10,7 @@ COPY program /opt/backend
 
 WORKDIR /opt/backend
 
-RUN g++ --std=c++11 main.cpp
+RUN g++ -pthread --std=c++11 main.cpp
 
 CMD /opt/backend/./a.out
 
